# sportsflow

./: .gitignore  Dockerfile  README.md  dev-setup.sh  devpod.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docker-build-deploy.yaml
containers/base/: Dockerfile
containers/mlb/: Dockerfile
dags/: hello_world.py  mlb_etl.py
src/sportsflow/: __init__.py
src/sportsflow/core/: clickhouse.py
src/sportsflow/mlb/: entrypoint.py
tests/: test_clickhouse_connector.py
