[project]
name = "sportsflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "reece", email = "reece.tec@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "apache-airflow>=3.0.3",
    "pendulum>=3.1.0",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"
