[project]
name = "sportsflow"
version = "0.1.0"
description = "ETL for sports data"
readme = "README.md"
authors = [
    { name = "reece", email = "reece.tec@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "clickhouse-connect>=0.8.18",
    "pandas>=2.3.1",
]

[project.optional-dependencies]
mlb = [
    "pybaseball>=2.2.7",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
